[gd_scene load_steps=16 format=3 uid="uid://cyt2n1u1gri1i"]

[ext_resource type="Script" uid="uid://dcr6k4iuxlhch" path="res://Enemy/enemy.gd" id="1_3o4wt"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vi685"]

[sub_resource type="CanvasTexture" id="CanvasTexture_3o4wt"]

[sub_resource type="Animation" id="Animation_l8h54"]
resource_name = "Flip_left"
length = 0.233
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-1, 1)]
}

[sub_resource type="Animation" id="Animation_4ntmi"]
resource_name = "Flip_right"
length = 0.233
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-1, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vtle1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotating/Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-2.05425]
}

[sub_resource type="Animation" id="Animation_fhl08"]
resource_name = "Swing"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rotating/Node2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 0.353553),
"update": 0,
"values": [-2.05425, -0.015708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_od3ui"]
_data = {
&"Flip_left": SubResource("Animation_l8h54"),
&"Flip_right": SubResource("Animation_4ntmi"),
&"RESET": SubResource("Animation_vtle1"),
&"Swing": SubResource("Animation_fhl08")
}

[sub_resource type="QuadMesh" id="QuadMesh_epr5s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vonkd"]
size = Vector2(24.5, 43)

[sub_resource type="CylinderMesh" id="CylinderMesh_vso2s"]

[sub_resource type="Curve" id="Curve_4ntmi"]
_data = [Vector2(0.359375, 0.640449), 0.0, 0.0, 0, 0, Vector2(0.473958, 0.337079), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_fkela"]
curve = SubResource("Curve_4ntmi")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2k2y"]
size = Vector2(20, 53)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3o4wt"]
size = Vector2(10, 8)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_3o4wt")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false

[node name="BodyTestSprite" type="MeshInstance2D" parent="."]
position = Vector2(5.68434e-14, -1)
scale = Vector2(26.5, 26.5)
mesh = SubResource("CapsuleMesh_vi685")
texture = SubResource("CanvasTexture_3o4wt")

[node name="AnimationPlayerRes" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_od3ui")
}

[node name="rotating" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="rotating"]
rotation = -2.05425

[node name="WeaponTestStprite" type="MeshInstance2D" parent="rotating/Node2D"]
position = Vector2(10.9981, 20.6892)
rotation = 1.07338
scale = Vector2(47.75, 6.69)
mesh = SubResource("QuadMesh_epr5s")

[node name="Weapon" type="Area2D" parent="rotating"]
position = Vector2(35, 0)
collision_layer = 0
collision_mask = 4

[node name="WeaponCollider" type="CollisionShape2D" parent="rotating/Weapon"]
position = Vector2(-6.25, -4.5)
shape = SubResource("RectangleShape2D_vonkd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="rotating"]
z_index = 3
position = Vector2(4, -14)
scale = Vector2(12, 4)
mesh = SubResource("CylinderMesh_vso2s")
texture = SubResource("CurveTexture_fkela")

[node name="BodyCollider" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_d2k2y")

[node name="AbyssCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-18, 26)
target_position = Vector2(0, 75)

[node name="AbyssCheckRight" type="RayCast2D" parent="."]
position = Vector2(18, 26)
target_position = Vector2(0, 75)

[node name="CantJumpOverCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-24, -46)
target_position = Vector2(-21, -16)
hit_from_inside = true

[node name="WallCheckLeft" type="RayCast2D" parent="."]
position = Vector2(-11, 25)
target_position = Vector2(-20, 0)
hit_from_inside = true

[node name="CantJumpOverCheckRight" type="RayCast2D" parent="."]
position = Vector2(30, -46)
target_position = Vector2(22, -16)
hit_from_inside = true

[node name="WallCheckRight" type="RayCast2D" parent="."]
position = Vector2(11, 25)
target_position = Vector2(20, 0)
hit_from_inside = true

[node name="CanJumpOffPlatformLeft" type="RayCast2D" parent="."]
position = Vector2(-31, -26)
target_position = Vector2(-62, 128)

[node name="CanJumpOffPlatformRight" type="RayCast2D" parent="."]
position = Vector2(35, -27)
target_position = Vector2(62, 128)

[node name="IgnoreSomeFloors" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="IgnoreSomeFloors"]
position = Vector2(0, 35)
shape = SubResource("RectangleShape2D_3o4wt")

[connection signal="animation_finished" from="AnimationPlayerRes" to="." method="_on_animation_player_res_animation_finished"]
[connection signal="animation_started" from="AnimationPlayerRes" to="." method="_on_animation_player_res_animation_started"]
